<resources>
    <string name="app_name">CRUD App</string>
    <string name="CRUD">CRUD App</string>
    <string name="student_id">enter student id</string>
    <string name="student_name">enter student name</string>
    <string name="subject">enter subject</string>
    <string name="marks">enter marks</string>
    <string name="result">enter result</string>
    <string name="Submit">create</string>
    <string name="read">read</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="id">enter student id</string>
</resources>