<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CRUD"
            android:gravity="center"
            android:textColor="#4CAF50"
            android:textSize="22sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/id"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/black"
            android:hint="@string/id"/>




        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/student_name"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:hint="@string/student_name"/>

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="sans-serif-light"
        android:id="@+id/subject"
        android:textColor="@color/black"
        android:hint="@string/subject"/>

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/marks"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/black"
        android:hint="@string/marks"
        android:autofillHints="@string/marks" />

    <EditText
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:id="@+id/result"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-light"
        android:hint="@string/result"
        android:autofillHints="@string/result" />
    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:id="@+id/create"
        android:text="@string/Submit"
        />
        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/read"
            android:text="@string/read"
            />

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/update"
            android:text="@string/update"
            />
        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:id="@+id/delete"
            android:text="@string/delete"
            />
</LinearLayout>
    </ScrollView>
</LinearLayout>